--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
     </section><!-- End Services content-->
     <section id="work">
-        work content
+        work content update 1
 
         Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
         aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
