updating services section icons

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <a href="/" class="d-flex align-items-center me-5 mb-2 mb-lg-0 text-white text-decoration-none">
-                <h2>Ford Files <i class="fas fa-laptop-code"></i></h2>
+                <h2>Ford Files <i class="fas fa-folder-open"></i></h2>
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mx-2 mb-2 justify-content-center mb-md-0">
@@ -48,7 +48,7 @@
         </header><!--End Navigation-->
 
     <section id="services"><!-- Begin Services Content-->
-        <div class="container px-4 py-4" id="custom-cards">
+        <div class="container px-4 py-1" id="custom-cards">
             <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
                 <div class="col">
                     <div id="web_dev_card" class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg">
@@ -56,15 +56,7 @@
                             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Website Development</h2>
                             <ul class="d-flex list-unstyled mt-auto">
                                 <li class="me-auto">
-                                    <i class="fas fa-3x fa-laptop-code" class="rounded-circle border border-white"></i>
-                                </li>
-                                <li class="d-flex align-items-center me-3">
-                                    <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"></use></svg>
-                                    <small>Earth</small>
-                                </li>
-                                <li class="d-flex align-items-center">
-                                    <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"></use></svg>
-                                    <small>3d</small>
+                                    <i class="fas fa-3x fa-laptop-code"></i>
                                 </li>
                             </ul>
                         </div>
@@ -77,15 +69,7 @@
                             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">SEO and Social Media</h2>
                             <ul class="d-flex list-unstyled mt-auto">
                                 <li class="me-auto">
-                                    <i class="fas fa-3x fa-laptop-code" class="rounded-circle border border-white"></i>
-                                </li>
-                                <li class="d-flex align-items-center me-3">
-                                    <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"></use></svg>
-                                    <small>Earth</small>
-                                </li>
-                                <li class="d-flex align-items-center">
-                                    <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"></use></svg>
-                                    <small>3d</small>
+                                    <i class="fab fa-3x fa-searchengin"></i>
                                 </li>
                             </ul>
                         </div>
@@ -98,15 +82,7 @@
                             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">App Development</h2>
                             <ul class="d-flex list-unstyled mt-auto">
                                 <li class="me-auto">
-                                    <i class="fas fa-3x fa-laptop-code" class="rounded-circle border border-white"></i>
-                                </li>
-                                <li class="d-flex align-items-center me-3">
-                                    <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"></use></svg>
-                                    <small>Earth</small>
-                                </li>
-                                <li class="d-flex align-items-center">
-                                    <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"></use></svg>
-                                    <small>3d</small>
+                                    <i class="fas fa-3x fa-mobile-alt"></i>
                                 </li>
                             </ul>
                         </div>
